Make Amazon clone fully responsive
 Major responsive design improvements:

 Mobile-first enhancements:
- Responsive navbar with collapsible mobile menu
- Progressive product grid (12345 columns)
- Touch-optimized product cards with adaptive sizing
- Mobile-friendly sidebar with overlay and backdrop

 UI/UX improvements:
- Enhanced typography scaling across devices
- Smart content prioritization for smaller screens
- Touch-friendly button and interaction areas
- Improved spacing and padding system

 Technical enhancements:
- Custom responsive CSS utilities and breakpoints
- Extended Tailwind configuration with 'xs' breakpoint
- Optimized component layouts for all screen sizes
- Better accessibility with focus states and keyboard navigation

 Breakpoint coverage:
- Mobile (320px+): Essential content, single column
- Small Mobile (480px+): Two-column grids
- Tablet (768px+): Multi-column layouts
- Desktop (1024px+): Full feature set with sidebar
- Large Desktop (1280px+): Maximum grid columns

 Components updated:
- Navbar: Progressive hiding, mobile menu, responsive search
- ProductGrid: Flexible grid system with adaptive pagination
- ProductCard: Scalable images, responsive text, smart truncation
- Sidebar: Mobile overlay, collapsible categories
- Footer: Progressive column stacking, content prioritization
- Cart: Mobile-optimized layout, touch-friendly controls
- All page components optimized for responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,23 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <!-- TailwindCSS CDN -->
+    <!-- TailwindCSS CDN with custom configuration -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            screens: {
+              'xs': '480px',
+            },
+            spacing: {
+              '18': '4.5rem',
+              '88': '22rem',
+            }
+          }
+        }
+      }
+    </script>
     
     <title>Amazon Clone</title>
   </head>
